services/pii-provider/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qb-service-pii
  namespace: qb
  labels:
    app: qb-service-pii
spec:
  selector:
    app: qb-service-pii
  ports:
    - name: http
      port: 80
      targetPort: 4120
      protocol: TCP
  type: ClusterIP
