services/pii-provider/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qb-service-pii-ingress
  namespace: qb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qb-service-pii.quaterbit.com
      secretName: qb-service-pii-quaterbit-com-tls
  rules:
    - host: qb-service-pii.quaterbit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qb-service-pii
                port:
                  number: 80
